2005-07-16	Jean-Francois Wauthy

	* po/eo.po: Update esperanto translations, thanks to Sylvain
	  Vedrenne <sylvain.vedrenne@free.fr>.

2005-07-15	Benedikt Meurer <benny@xfce.org>

	* xfce4-tips/, NEWS: Import the xfce4-tips from the xfce4-toys and
	  modify it to support the new autostart mechanism.
	* po/POTFILES.in: Add new translateable files here.
	* po/*.po, po/xfce4-session.pot: Merge translations.
	* configure.in.in, Makefile.am: Add the xfce4-tips to the build
	  framework.
	* xfce4-session.spec.in: Include the default autostart directory as
	  well.

2005-07-15	Benedikt Meurer <benny@xfce.org>

	* xfce4-autostart-editor/, NEWS: Add a simple editor for the autostart
	  mechanism. Currently supports only the basics. The idea is to turn
	  this into a full-featured "session editor" once xfce4-session
	  understands D-BUS.
	* configure.in.in, Makefile.am: Add the autostart editor to the build
	  framework.
	* po/POTFILES.in: Add new translateable files here.
	* po/*.po, po/xfce4-session.pot: Merge translations.

2005-07-14	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/xfsm-startup.c: Implement Waldos second draft of the
	  autostart specification. Autostart items from the old location will
	  automatically be migrated to the new standard location on first run
	  of the new session manager. This fixes bug #1045.
	* docs/C/xfce4-session.{html,xml}: Describe the new autostart location.
	* configure.in.in: Bump version to 4.3.1.
	* NEWS, docs/Makefile.am, docs/NEWS.pre-4.3: Start NEWS file for
	  Xfce 4.4.
	* po/*.po, po/xfce4-session.pot: Merge new strings.

2005-07-14	Benedikt Meurer <benny@xfce.org>

	* autogen.sh: Fix copyright typo.

2005-07-14	Benedikt Meurer <benny@xfce.org>

	* autogen.sh, configure.in.in: Merge framework changes from Thunar.
	* configure.in.in: Bump version to 4.3.0svn.
	* libxfsm/xfsm-util.c(xfsm_window_add_border): Apply Patch from Ori
	  Bernstein to fix the border color of the shutdown dialog, as specified
	  in bug #747.
