@@ -10,12 +10,12 @@
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2, or (at your option)
 # any later version.
-#                                                                              
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-#                                                                              
+#
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
@@ -29,9 +29,10 @@
 [Info]
 Name=Default Theme
 Name[de]=Standard Thema
+Name[ja]=標準のテーマ
 Description=This is the default Balou splash theme.
 Description[de]=Dies ist das Standard Balou Thema.
-
+Description[ja]=これは標準の Balou スプラッシュテーマです。
 
 #
 # splash screen settings
