@@ -366,8 +366,8 @@ config_preview (XfsmSplashConfig *config)
 G_MODULE_EXPORT void
 config_init (XfsmSplashConfig *config)
 {
-  config->name        = g_strdup ("Mice");
-  config->description = g_strdup ("Mice Splash Engine");
+  config->name        = g_strdup (_("Mice"));
+  config->description = g_strdup (_("Mice Splash Engine"));
   config->version     = g_strdup (VERSION);
   config->author      = g_strdup ("Benedikt Meurer");
   config->homepage    = g_strdup ("http://www.xfce.org/");
