@@ -1,3 +1,13 @@
+2005-07-20	Benedikt Meurer <benny@xfce.org>
+
+	* engines/balou/config.c, engines/mice/mice.c, engines/simple/simple.c,
+	  xfce4-session/xfsm-chooser.c: Mark more user visible strings for
+	  translation, using the patch provided by Daichi Kawahata
+	  <daichik@users.sourceforge.net>.
+	* xfce4-session.rc, engines/balou/themes/Default/themerc: Add japanese
+	  translations, thanks to Daichi Kawahata
+	  <daichik@users.sourceforge.net>.
+
 2005-07-16	Jean-Francois Wauthy
 
 	* po/eo.po: Update esperanto translations, thanks to Sylvain
